# CrewAIFlowsBookWriter

./: .gitignore  .pdm-python  main.py  pyproject.toml
src/crews/: types.py
src/crews/outline_book_crew/: outline_crew.py
src/crews/outline_book_crew/config/: agents.yml  tasks.yml
src/crews/write_book_chapter_crew/: write_book_chapter_crew.py
src/crews/write_book_chapter_crew/config/: agents.yml  tasks.yml
